Added Nodejs Supprt

--- a/index.html
+++ b/index.html
@@ -639,7 +639,7 @@
               <div class="col-lg-6 text-center">
                 <ul class="list-inline">
                   <li class="list-inline-item mr-2">
-                    <a href="#" class="text-dark">CodeAndCreate</a>
+                    <a href="#" class="text-dark">ASSIGNMENT</a>
                   </li>
                   <li class="list-inline-item mr-2">
                     <a href="#" class="text-dark">About</a>
@@ -653,7 +653,7 @@
                 </ul>
               </div>
               <div class="col-lg-6 text-center">
-                <p>&copy; 2018 Copyright. Made With <i class="fas fa-heart text-danger"></i> by <span class="text-success">Raunak Jalan</span></p>
+                <p>&copy; 2020 Copyright. Made With <i class="fas fa-heart text-danger"></i> by <span class="text-success">Raunak Jalan</span></p>
               </div>
             </div>
           </div>
